Fix flex layout issue
change main's flex-direction from row to column
remove align-items from header layer

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 main {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
 }
 
 button {
@@ -139,7 +139,6 @@ button {
 .header__layer {
   display: flex;
   flex-flow: column;
-  align-items: baseline;
   justify-content: center;
   padding: 3.7rem 0 4rem 6.3rem;
   position: absolute;
